# corona-data-donation-who5-and-vitals

./: .gitignore  Makefile  README.md  pyproject.toml
config/: main.yaml
data/00_external/: nuts3de.json  pc2020_DE_NUTS-2021_v3.0.csv
datenspende_who5/: analyze.py  compute.py  load_from_db.py  load_raw_data.py  merge.py  preprocess.py  process.py  utils.py
datenspende_who5/data/: download_data_from_rocs_db.py
notebooks/: 0.01-compare_old_and_new_data_after_refactoring.ipynb  0.01-sandbox.ipynb  1.01-plot_raw_survey_data.ipynb  1.01-plot_survey_data.ipynb  1.02-analyze_vitals_vs_survey.ipynb  1.02-plot_average_vitals_per_survey_response.ipynb  1.03-individual-interrelations-and-correlations.ipynb  2.01-figures_for_paper.ipynb  2.02-statistical-model.ipynb  Redo data preparation.ipynb  Sandbox.ipynb  compare-old-and-new-data-after-refactoring.ipynb  figure1-wellbeing-rhr-activity-basic-demographics.ipynb  socio-demographics.ipynb
scripts/: execute_notebooks.sh
src/: analyze.py  download.py  merge.py  preprocess.py
src/utils/: colors.py  styling.py
