[tool.poetry]
name = "datenspende-who5"
version = "0.1.0"
description = ""
authors = ["Marc Wiedermann <marcwiedermann@posteo.de>"]
readme = "README.md"
packages = [{include = "datenspende_who5"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
geopandas = "^0.13.2"
scipy = "^1.11.1"
seaborn = "^0.12.2"
hydra-core = "^1.3.2"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
